--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,9 +34,9 @@ jobs:
         docker push ${{ secrets.AZURE_CONTAINER_APP_NAME }}:latest
 
     - name: Deploy to Azure Container Apps
-      uses: azure/azure-containerapps-deploy@v1
+      uses: azure/container-apps-deploy@v1
       with:
         app-name: ${{ secrets.AZURE_CONTAINER_APP_NAME }}
         resource-group: ${{ secrets.AZURE_RESOURCE_GROUP }}
-        image: ${{ secrets.AZURE_CONTAINER_APP_NAME }}:latest
+        image: ${{ secrets.AZURE_CONTAINER_REGISTRY }}/${{ secrets.AZURE_CONTAINER_APP_NAME }}:latest
         environment-id: /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/${{ secrets.AZURE_RESOURCE_GROUP }}/providers/Microsoft.App/managedEnvironments/myContainerAppEnv
