--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,20 +23,23 @@ jobs:
         client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
 
-    - name: Build Docker image
+    - name: Log in to Azure Container Registry (ACR)
       run: |
-        docker build -t ${{ secrets.AZURE_CONTAINER_APP_NAME }} .
-        docker tag ${{ secrets.AZURE_CONTAINER_APP_NAME }} ${{ secrets.AZURE_CONTAINER_APP_NAME }}:latest
+        echo "${{ secrets.AZURE_CLIENT_SECRET }}" | docker login ${{ secrets.AZURE_CONTAINER_REGISTRY }} -u ${{ secrets.AZURE_CLIENT_ID }} --password-stdin
 
-    - name: Push Docker image to Azure Container Registry
+    - name: Build Docker Image
       run: |
-        docker login ${{ secrets.AZURE_CONTAINER_REGISTRY }} -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }}
-        docker push ${{ secrets.AZURE_CONTAINER_APP_NAME }}:latest
+        docker build -t ${{ secrets.AZURE_CONTAINER_REGISTRY }}/${{ secrets.AZURE_CONTAINER_APP_NAME }}:latest .
+    
+    - name: Push Docker Image to ACR
+      run: |
+        docker push ${{ secrets.AZURE_CONTAINER_REGISTRY }}/${{ secrets.AZURE_CONTAINER_APP_NAME }}:latest
 
     - name: Deploy to Azure Container Apps
-      uses: azure/container-apps-deploy@v1
+      uses: azure/container-apps-deploy@v2
       with:
         app-name: ${{ secrets.AZURE_CONTAINER_APP_NAME }}
         resource-group: ${{ secrets.AZURE_RESOURCE_GROUP }}
         image: ${{ secrets.AZURE_CONTAINER_REGISTRY }}/${{ secrets.AZURE_CONTAINER_APP_NAME }}:latest
         environment-id: /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/${{ secrets.AZURE_RESOURCE_GROUP }}/providers/Microsoft.App/managedEnvironments/myContainerAppEnv
+
