--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,18 +3,15 @@ name: Deploy to Azure Container Apps
 on:
   push:
     branches:
-      - main
-  pull_request:
-    branches:
       - main  
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Log in to Azure
       uses: azure/login@v1
@@ -23,23 +20,10 @@ jobs:
         client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
 
-    - name: Log in to Azure Container Registry (ACR)
-      run: |
-        echo "${{ secrets.AZURE_CLIENT_SECRET }}" | docker login ${{ secrets.AZURE_CONTAINER_REGISTRY }} -u ${{ secrets.AZURE_CLIENT_ID }} --password-stdin
-
-    - name: Build Docker Image
-      run: |
-        docker build -t ${{ secrets.AZURE_CONTAINER_REGISTRY }}/${{ secrets.AZURE_CONTAINER_APP_NAME }}:latest .
-    
-    - name: Push Docker Image to ACR
-      run: |
-        docker push ${{ secrets.AZURE_CONTAINER_REGISTRY }}/${{ secrets.AZURE_CONTAINER_APP_NAME }}:latest
-
     - name: Deploy to Azure Container Apps
       uses: azure/container-apps-deploy@v2
       with:
         app-name: ${{ secrets.AZURE_CONTAINER_APP_NAME }}
         resource-group: ${{ secrets.AZURE_RESOURCE_GROUP }}
-        image: ${{ secrets.AZURE_CONTAINER_REGISTRY }}/${{ secrets.AZURE_CONTAINER_APP_NAME }}:latest
+        image: ${{ secrets.AZURE_CONTAINER_IMAGE }}
         environment-id: /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/${{ secrets.AZURE_RESOURCE_GROUP }}/providers/Microsoft.App/managedEnvironments/myContainerAppEnv
-
