--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,46 +1,48 @@
-name: Deploy to Azure Container Apps
+name: Build and Deploy to Azure Container App
 
 on:
   push:
     branches:
-      - main  # Deploy when code is pushed to the main branch
-
-permissions:
-  id-token: write  # Required for OIDC authentication
-  contents: read
+      - 'main'
 
 jobs:
-  deploy:
+  build-and-deploy:
+    name: 'Build and Deploy to ACR and Container App'
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        shell: bash
+
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-      - name: Log in to Azure
-        uses: azure/login@v1
+      - name: Docker Login to Azure Container Registry
+        uses: azure/docker-login@v1
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          enable-AzPSSession: false
-          environment: azurecloud
-          allow-no-subscriptions: false
-          audience: api://AzureADTokenExchange
-          auth-type: SERVICE_PRINCIPAL
+          login-server: ${{ secrets.AZURE_URL }}
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
 
-      - name: Log in to Azure Container Registry
-        run: |
-          az acr login --name ${{ secrets.ACR_NAME }}
+      - name: Build and Push Docker Image to ACR
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.AZURE_URL }}/my-container-app:${{ github.sha }}
+          file: ./Dockerfile
 
-      - name: Build and Push Docker Image
-        run: |
-          docker build -t ${{ secrets.ACR_NAME }}.azurecr.io/my-app:latest .
-          docker push ${{ secrets.ACR_NAME }}.azurecr.io/my-app:latest
-
-      - name: Deploy to Azure Container Apps
-        run: |
-          az containerapp update \
-            --name ${{ secrets.CONTAINER_APP_NAME }} \
-            --resource-group ${{ secrets.RESOURCE_GROUP }} \
-            --image ${{ secrets.ACR_NAME }}.azurecr.io/my-app:latest
+      # Deploy the container app
+      - name: Deploy Container App
+        uses: azure/container-apps-deploy-action@v0
+        with:
+          appSourcePath: ${{ github.workspace }}
+          acrName: mycontainerregistry0
+          acrUsername: ${{ secrets.ACR_USERNAME }}
+          acrPassword: ${{ secrets.ACR_PASSWORD }}
+          containerAppName: my-container-app
+          containerAppEnvironment: ${{ secrets.CONTAINER_APP_ENVIRONMENT }}
+          resourceGroup: ${{ secrets.RESOURCE_GROUP }}
+          imageToBuild: ${{ secrets.AZURE_URL }}/my-container-app:${{ github.sha }}
+          dockerfilePath: ./Dockerfile
