--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - 'main'
-
+permissions:
+  id-token: write
+  contents: read
 jobs:
   build-and-deploy:
     name: 'Build and Deploy to ACR and Container App'
